--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,6 +12,8 @@ jobs:
       - name: Install Nix
         uses: DeterminateSystems/nix-installer-action@main
       - uses: DeterminateSystems/magic-nix-cache-action@main
+      - name: Run Tests
+        run: nix develop -c forge test --no-auto-detect
       - name: Build Book
         run: nix develop -c forge doc --build
       - name: Setup Pages
