--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,6 +7,7 @@ jobs:
     permissions:
       id-token: write
       pages: write
+      contents: read
     steps:
       - uses: actions/checkout@v4
       - name: Install Nix
