--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,3 +26,10 @@ jobs:
         run: nix build '.#market-build'
       - name: deploy market to anvil
         run: nix develop -c deploy-market
+      - name: check broadcasts
+        run: |
+          export $(./update_env.sh broadcast/deploy.s.sol/31337/run-latest.json | xargs)
+          test -n "$RELAY_REGISTRY_ADDRESS"
+          test -n "$STORE_REGISTRY_ADDRESS"
+          test -n "$PAYMENT_FACTORY_ADDRESS"
+          test -n "$THIS_SHOULD_FAIL"
