--- a/foundry.toml
+++ b/foundry.toml
@@ -1,3 +1,7 @@
+# SPDX-FileCopyrightText: 2024 Mass Labs
+#
+# SPDX-License-Identifier: GPL-3.0-or-later
+
 [profile.default]
 src = 'src'
 out = 'out'
