--- a/foundry.toml
+++ b/foundry.toml
@@ -7,6 +7,7 @@ src = 'src'
 out = 'out'
 script = 'script'
 libs = ['lib']
+fs_permissions = [{access = "write", path = "."}]
 
 [rpc_endpoints]
 sepolia = "${SEPOLIA_RPC_URL}"
