--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,6 +34,6 @@ jobs:
         run: |
           export $(nix shell .# --command update_env.sh | xargs)
           test -n "$RELAY_REGISTRY_ADDRESS" || { echo "RELAY_REGISTRY_ADDRESS not set"; exit 1; }
-          test -n "$STORE_REGISTRY_ADDRESS" || { echo "STORE_REGISTRY_ADDRESS not set"; exit 1; }
+          test -n "$SHOP_REGISTRY_ADDRESS" || { echo "SHOP_REGISTRY_ADDRESS not set"; exit 1; }
           test -n "$PAYMENT_FACTORY_ADDRESS" || { echo "PAYMENT_FACTORY_ADDRESS not set"; exit 1; }
 
