--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,19 +21,9 @@ jobs:
       - uses: actions/checkout@v4
       - name: Install Nix
         uses: DeterminateSystems/nix-installer-action@main
-      - uses: DeterminateSystems/magic-nix-cache-action@main
+      - uses: DeterminateSystems/flakehub-cache-action@main
       - uses: DeterminateSystems/flake-checker-action@main
+      - name: Run Checks
+        run: nix flake check .
       - name: Run Tests
-        run: nix develop -c forge test --no-auto-detect
-      - name: build ABIs
-        run: nix build .#
-      - name: deploy market to anvil
-        run: |
-          nix develop .# --command deploy-market
-      - name: check broadcasts
-        run: |
-          export $(nix shell .# --command update_env.sh | xargs)
-          test -n "$RELAY_REGISTRY_ADDRESS" || { echo "RELAY_REGISTRY_ADDRESS not set"; exit 1; }
-          test -n "$SHOP_REGISTRY_ADDRESS" || { echo "SHOP_REGISTRY_ADDRESS not set"; exit 1; }
-          test -n "$PAYMENT_FACTORY_ADDRESS" || { echo "PAYMENT_FACTORY_ADDRESS not set"; exit 1; }
-
+        run: nix build .#mass-contracts  --log-lines 0 --print-build-logs
